Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96327

qt5.15 examples on qnx710 display "is an invalid ELF object (shstrtab section header seems to be at 0)“

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.3.0 Feature Freeze
    • 5.15
    • Core: Plugins, QPA
    • None
    • 1. QT version: 5.15 branch
      2. Target OS: QNX710
      3. HW: Semidrive X9H Reference Board
    • QNX
    • 8c2969ea86c4b38cbece5c1c2295e44dd5aa4f71

      We build qt5.15 for QNX710, when run example display below error info:

      # ./examples/gui/analogclock/analogclock
      QFactoryLoader::QFactoryLoader() checking directory path "/usr/qt5/plugins/platforms" ...
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqeglfs.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqeglfs.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqeglfs.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqminimal.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqminimal.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqminimal.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqminimalegl.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqminimalegl.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqminimalegl.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqoffscreen.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqoffscreen.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqoffscreen.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqqnx.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqqnx.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqqnx.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqvnc.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqvnc.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqvnc.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() checking directory path "/usr/qt5/plugins" ...
      QFactoryLoader::QFactoryLoader() checking directory path "/usr/qt5/examples/gui/analogclock" ...
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/examples/gui/analogclock/analogclock"
      QElfParser: '/usr/qt5/examples/gui/analogclock/analogclock' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/examples/gui/analogclock/analogclock' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() checking directory path "/usr/qt5/plugins/platforms/platforms" ...
      QFactoryLoader::QFactoryLoader() checking directory path "/usr/qt5/plugins/platforms" ...
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqeglfs.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqeglfs.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqeglfs.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqminimal.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqminimal.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqminimal.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqminimalegl.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqminimalegl.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqminimalegl.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqoffscreen.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqoffscreen.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqoffscreen.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqqnx.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqqnx.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqqnx.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() looking at "/usr/qt5/plugins/platforms/libqvnc.so"
      QElfParser: '/usr/qt5/plugins/platforms/libqvnc.so' is an invalid ELF object (shstrtab section header seems to be at 0)
      "'/usr/qt5/plugins/platforms/libqvnc.so' is an invalid ELF object (shstrtab section header seems to be at 0)"
       not a plugin
      QFactoryLoader::QFactoryLoader() checking directory path "/usr/qt5/examples/gui/analogclock/platforms" ...
      qt.qpa.plugin: Could not find the Qt platform plugin "qnx" in "/usr/qt5/plugins/platforms"
      This application failed to start because no Qt platform plugin could be initialized. Reinstalling the application may fix this problem.
      
      Abort (core dumped)
      

       

      Our build configure as below:

      ../../qt5/configure \
      -prefix /usr/qt5 \
      -extprefix /prebuilt/qt5 \
      -xplatform qnx-aarch64le-qcc \
      -release \
      -shared \
      -opensource \
      -confirm-license \
      -nomake tests \
      -no-feature-printer \
      -no-fontconfig \
      -no-icu \
      -qt-pcre \
      -c++std c++14 \
      --freetype=qt \
      -skip qt3d \
      -skip qtactiveqt \
      -skip qtandroidextras \
      -skip qtcanvas3d \
      -skip qtcharts \
      -skip qtconnectivity \
      -skip qtdatavis3d \
      -skip qtdeclarative \
      -skip qtdoc \
      -skip qtdocgallery \
      -skip qtfeedback \
      -skip qtgamepad \
      -skip qtgraphicaleffects \
      -skip qtimageformats \
      -skip qtlocation \
      -skip qtlottie \
      -skip qtmacextras \
      -skip qtmultimedia \
      -skip qtnetworkauth \
      -skip qtpim \
      -skip qtpurchasing \
      -skip qtqa \
      -skip qtquick3d \
      -skip qtquickcontrols \
      -skip qtquickcontrols2 \
      -skip qtquicktimeline \
      -skip qtremoteobjects \
      -skip qtrepotools \
      -skip qtscript \
      -skip qtscxml \
      -skip qtsensors \
      -skip qtserialbus \
      -skip qtserialport \
      -skip qtspeech \
      -skip qtsvg \
      -skip qtsystems \
      -skip qttools \
      -skip qttranslations \
      -skip qtvirtualkeyboard \
      -skip qtwayland \
      -skip qtwebchannel \
      -skip qtwebengine \
      -skip qtwebglplugin \
      -skip qtwebsockets \
      -skip qtwebview \
      -skip qtwinextras \
      -skip qtx11extras \
      -skip qtxmlpatterns
      

        1. libqeglfs.so
          16 kB
          user-0ff63
        2. libqqnx.so
          1.05 MB
          user-0ff63
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            jirauser61772 user-0ff63 (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: